--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 
 [dependencies]
 gilrs = "0.7.4"
-zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
+zenoh = "0.5.0-beta.3"
 async-trait = "0.1.36"
 
 serde_derive = "1.0.55"
