--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,16 +21,21 @@ env_logger = "0.7.1"
 futures = "0.3.5"
 
 [dependencies.async-std]
-version = "~1.6.0"
+version = "~1.6.5"
 features = ["unstable", "attributes"]
 
 
 [[bin]]
-name = "teleop"
+name = "read_joypad"
 test = false
 bench = false
 
 [[bin]]
-name = "monitor"
+name = "joy2robot"
+test = false
+bench = false
+
+[[bin]]
+name = "teleop"
 test = false
 bench = false
