--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-gilrs = "0.7.4"
+gilrs = "0.8.0"
 #zenoh = "0.5.0-beta.3"
 zenoh = { git = "https://github.com/eclipse-zenoh/zenoh.git", branch = "master" }
 async-trait = "0.1.36"
@@ -17,11 +17,11 @@ serde = { version = "1.0.55", features = ["derive"] }
 serde_json = "1.0.55"
 bincode = "1.3.1"
 log = "0.4"
-env_logger = "0.7.1"
+env_logger = "0.8.3"
 futures = "0.3.5"
 
 [dependencies.async-std]
-version = "~1.6.5"
+version = "1.9.0"
 features = ["unstable", "attributes"]
 
 
